<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StockQuote</string>
    <string name="action_settings">Settings</string>
    <string name="About">About</string>
    <string name="Refresh">Refresh</string>
    <string name="Manage">Manage</string>
    <string name="Index">STI</string>
    <string name="All">All Stocks</string>
    
    <string name='Watchlist1'>&quot;Watchlist 1&quot;</string>
    <string name='Watchlist2'>&quot;Watchlist 2&quot;</string>
    
    <string name="add_watchlist1">Add to Watchlist 1</string>
    <string name="add_watchlist2">Add to Watchlist 2</string>
    <string name="add_watchlist3">Add to Watchlist 3</string>
    <string name="dividend_details">Dividend Details</string>
    
    
    <string name="remove_watchlist">&quot;Remove from Watchlist &quot;</string>    
    <string name="remove_allfromwatchlist">&quot;Remove all from Watchlist &quot;</string>
    
    <string name="Search">Search</string>
    <string name="Cancel">Cancel</string>
    
    
    <string name="stock_name">Stock Name</string>
    
    <string name="No_internet_connection">No internet connection is available.</string>

</resources>